# system-backupper

./: .dockerignore  .env-blueprint  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml  system-backupper.yaml
docs/adr/: 001_22-10-2025_ubuntu_as_base_docker_image.md
migrations/: 1.0.0--create-backup-metadata-table.sql
src/: app_config.rs  connection_pool.rs  errorstack.rs  file_system_repositories.rs  lock.rs  main.rs  process.rs
src/endpoints/: api_model.rs  endpoints.rs  mod.rs
src/jobs/: cron_jobs.rs  mod.rs  scheduled_backup_job.rs
src/model/: backup_metadata.rs  configured_backup_target.rs  cyclick_backup.rs  mod.rs  repository.rs
src/services/: backup_strategy.rs  backupping_service.rs  errors.rs  mod.rs
testing/dev/: docker-compose.yml  spinup-local-environment.sh
testing/dev/mongo/: testCollection.json  testCollectionWithIndex.json
testing/dev/postgres/: test-data.sql
testing/e2e/: docker-compose.yml  e2e_test_mongodb.py  e2e_test_postgres.py  requirements.txt
