[package]
name = "system-backupper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.39", features = ["serde"] }
cron = "0.17.0"
dotenv = { path = 'rust-lib/dotenv' }
migrations = { path = 'rust-lib/migrations', features = ["sqlite"] }
env_logger = "0.11.6"
flate2 = "1.1.5"
log = "0.4.29"
rand = "0.10.2"
rusqlite = { version = "0.34.0", features = ["chrono", "bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
signal-hook = "0.4.1"
strum = { version = "0.28.0", features = ["derive"] }
url = "2.5.4"
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
urlencoding = "2.1.3"

[dev-dependencies]
axum-test = "18.5.0"
serde_json = "1.0.145"
